fix metric name by removing additional quotes

--- a/concourse/tasks/publish-job-result.yaml
+++ b/concourse/tasks/publish-job-result.yaml
@@ -23,4 +23,4 @@ run:
   - --task=publish-job-result
   - --result-state=((result_state))
   - --start-timestamp=((start_timestamp))
-  - --metric-path="concourse/job/duration"
+  - --metric-path=concourse/job/duration
