--- a/concourse/pipelines/pipeline-set-pipeline.yaml
+++ b/concourse/pipelines/pipeline-set-pipeline.yaml
@@ -15,8 +15,8 @@ jobs:
     file: guest-test-infra/concourse/pipelines/linux-image-build.yaml
   - set_pipeline: guest-package-build
     file: guest-test-infra/concourse/pipelines/guest-package-build.yaml
-  - set_pipeline: dev-image-build
-    file: guest-test-infra/concourse/pipelines/dev-image-build.yaml
+  - set_pipeline: debian-worker-image-build
+    file: guest-test-infra/concourse/pipelines/debian-worker-image-build.yaml
   - set_pipeline: bare-metal-image-build
     file: guest-test-infra/concourse/pipelines/bare-metal-image-build.yaml
   - set_pipeline: partner-image-export
