--- a/concourse/pipelines/guest-package-build.yaml
+++ b/concourse/pipelines/guest-package-build.yaml
@@ -160,7 +160,7 @@ jobs:
     file: guest-test-infra/concourse/tasks/image-test-args.yaml
     vars:
       images: projects/gcp-guest/global/images/debian-9-((.:build-id)),projects/gcp-guest/global/images/debian-10-((.:build-id)),projects/gcp-guest/global/images/centos-7-((.:build-id)),projects/gcp-guest/global/images/centos-8-((.:build-id)),projects/gcp-guest/global/images/centos-7-((.:build-id)),projects/gcp-guest/global/images/centos-8-((.:build-id))
-      extra-args: "-filter='^[^n]'"
+      extra-args: "-exclude=network"
   - in_parallel:
       fail_fast: true
       steps:
