--- a/concourse/tasks/image-test.yaml
+++ b/concourse/tasks/image-test.yaml
@@ -19,5 +19,5 @@ run:
   args:
   - -project=gcp-guest
   - -zone=us-west1-a
-  - -test_projects="compute-image-test-pool-002,compute-image-test-pool-003,compute-image-test-pool-004,compute-image-test-pool-005"
+  - -test_projects=compute-image-test-pool-002,compute-image-test-pool-003,compute-image-test-pool-004,compute-image-test-pool-005
   - -images=((images))
