--- a/concourse/pipelines/guest-package-build.yaml
+++ b/concourse/pipelines/guest-package-build.yaml
@@ -132,6 +132,12 @@ jobs:
           source-image: projects/debian-cloud/global/images/family/debian-10
           dest-image: debian-10-((.:build-id))
           gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent_((.:package-version))-g1_amd64.deb
+      - task: build-package-image-debian-11
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/debian-cloud/global/images/family/debian-11
+          dest-image: debian-11-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent_((.:package-version))-g1_amd64.deb
       - task: build-package-image-centos-7
         file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
         vars:
