--- a/concourse/tasks/build-container-image.yaml
+++ b/concourse/tasks/build-container-image.yaml
@@ -4,7 +4,7 @@ image_resource:
   type: docker-image
   source:
     repository: gcr.io/kaniko-project/executor
-    tag: debug
+    tag: debug-v1.2.0
 
 inputs:
 - name: guest-test-infra
